--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Neucha&family=Outfit:wght@100..900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
+
 @import "tailwindcss";
+
+*{
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+}
